--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+
+<link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
+<app-root></app-root>
 </body>
 </html>
