--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,102 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  
+  <div class="container col-12 d-flex justify-content-end">
+    <h1> <span class="badge bg-primary">Nombre Usuario/Admin</span></h1>
+  </div>
+  
+  <div class="container-xxl col-12">
+    <div class="row d-flex justify-content-center">
+      
+      <select class="form-select form-select-lg mb-3 p-3 col-2" aria-label=".form-select-lg example">
+        <option selected>Administrador / Usuario</option>
+        <option value="1">Administrador</option>
+        <option value="2">Usuario</option>
+      </select>
+
+
+    </div>
+ </div>
+  
+<!--
+<div class="container-xxl col-12">
+  <div class="row  d-flex justify-content-center  pb-3" >
+    <h1>Registrarse</h1>
+  </div>
+
+  <div class="row  d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputEmail1" class="form-label">Nombre</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputPassword1" class="form-label">Apellido</label>
+      <input type="email" class="form-control" id="exampleInputPassword1">
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputPassword1" class="form-label">Nombre Usuario</label>
+      <input type="email" class="form-control" id="exampleInputPassword1">
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
+      <input type="email" class="form-control" id="exampleInputPassword1">
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+      <input type="email" class="form-control" id="exampleInputPassword1">
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="mb-3 col-6">
+      <label for="exampleInputPassword1" class="form-label">Confirmar contraseña</label>
+      <input type="email" class="form-control" id="exampleInputPassword1">
+    </div>
+  </div>
+-->
+
+<div class="row d-flex justify-content-center">
+  <div class="mb-3 col-6">
+    <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
+    <input type="email" class="form-control" id="exampleInputPassword1">
+  </div>
+</div>
+
+<div class="row d-flex justify-content-center">
+  <div class="mb-3 col-6">
+    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+    <input type="email" class="form-control" id="exampleInputPassword1">
+  </div>
+</div>
+
+</div>
+   
+
+ <div class="container-xxl col-12">
+    <div class="row d-flex justify-content-center">
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Login</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Foro Q&A</button>
+    </div>
+ </div>
+
+
+
+
+
+
 
 <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
 <app-root></app-root>
