--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  
+  <!--
   <div class="container col-12 d-flex justify-content-end">
     <h1> <span class="badge bg-primary">Nombre Usuario/Admin</span></h1>
   </div>
@@ -17,16 +17,16 @@
     <div class="row d-flex justify-content-center">
       
       <select class="form-select form-select-lg mb-3 p-3 col-2" aria-label=".form-select-lg example">
-        <option selected>Administrador / Usuario</option>
+        <option selected>Seleccione seccion</option>
         <option value="1">Administrador</option>
-        <option value="2">Usuario</option>
+
       </select>
 
 
     </div>
  </div>
   
-<!--
+
 <div class="container-xxl col-12">
   <div class="row  d-flex justify-content-center  pb-3" >
     <h1>Registrarse</h1>
@@ -73,7 +73,6 @@
       <input type="email" class="form-control" id="exampleInputPassword1">
     </div>
   </div>
--->
 
 <div class="row d-flex justify-content-center">
   <div class="mb-3 col-6">
@@ -94,16 +93,17 @@
 
  <div class="container-xxl col-12">
     <div class="row d-flex justify-content-center">
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Login</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Foro Q&A</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Agregar Respuesta</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Eliminar Respuesta</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Guardar Cambios</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >3.</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >. . .</button>
+      <button type="button" class="btn btn-danger btn-lg m-2"  >X</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Todo</button>
+      <button type="button" class="btn btn-primary btn-lg m-2"  >Reportar</button>
     </div>
  </div>
-
-
-
-
-
-
+-->
 
 <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
 <app-root></app-root>
