--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,14 @@
  </div>
 -->
 
+
+<!-- As a heading -->
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Navbar</span>
+  </div>
+</nav>
+
 <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
 <app-root></app-root>
 </body>
