--- a/src/index.html
+++ b/src/index.html
@@ -6,110 +6,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+  
+  <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
+
 </head>
 <body>
-  <!--
-  <div class="container col-12 d-flex justify-content-end">
-    <h1> <span class="badge bg-primary">Nombre Usuario/Admin</span></h1>
-  </div>
-  
-  <div class="container-xxl col-12">
-    <div class="row d-flex justify-content-center">
-      
-      <select class="form-select form-select-lg mb-3 p-3 col-2" aria-label=".form-select-lg example">
-        <option selected>Seleccione seccion</option>
-        <option value="1">Administrador</option>
-
-      </select>
-
-
-    </div>
- </div>
   
 
-<div class="container-xxl col-12">
-  <div class="row  d-flex justify-content-center  pb-3" >
-    <h1>Registrarse</h1>
-  </div>
 
-  <div class="row  d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputEmail1" class="form-label">Nombre</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Apellido</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Nombre Usuario</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Confirmar contraseña</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-<div class="row d-flex justify-content-center">
-  <div class="mb-3 col-6">
-    <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
-    <input type="email" class="form-control" id="exampleInputPassword1">
-  </div>
-</div>
-
-<div class="row d-flex justify-content-center">
-  <div class="mb-3 col-6">
-    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-    <input type="email" class="form-control" id="exampleInputPassword1">
-  </div>
-</div>
-
-</div>
-   
-
- <div class="container-xxl col-12">
-    <div class="row d-flex justify-content-center">
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Agregar Respuesta</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Eliminar Respuesta</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Guardar Cambios</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >3.</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >. . .</button>
-      <button type="button" class="btn btn-danger btn-lg m-2"  >X</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Todo</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Reportar</button>
-    </div>
- </div>
--->
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  -->
 
 
-<!-- As a heading -->
 
-
-<link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
 <app-root></app-root>
 </body>
+
 </html>
