--- a/src/index.html
+++ b/src/index.html
@@ -2,111 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Foromultimedia</title>
+  <title>Foro Multimedia</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
+  <!--Librerias Nuevas-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!--Librerias Viejas-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-  <!--
-  <div class="container col-12 d-flex justify-content-end">
-    <h1> <span class="badge bg-primary">Nombre Usuario/Admin</span></h1>
-  </div>
-  
-  <div class="container-xxl col-12">
-    <div class="row d-flex justify-content-center">
-      
-      <select class="form-select form-select-lg mb-3 p-3 col-2" aria-label=".form-select-lg example">
-        <option selected>Seleccione seccion</option>
-        <option value="1">Administrador</option>
-
-      </select>
+<body class="mat-typography">
 
 
-    </div>
- </div>
-  
-
-<div class="container-xxl col-12">
-  <div class="row  d-flex justify-content-center  pb-3" >
-    <h1>Registrarse</h1>
-  </div>
-
-  <div class="row  d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputEmail1" class="form-label">Nombre</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Apellido</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Nombre Usuario</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="mb-3 col-6">
-      <label for="exampleInputPassword1" class="form-label">Confirmar contraseña</label>
-      <input type="email" class="form-control" id="exampleInputPassword1">
-    </div>
-  </div>
-
-<div class="row d-flex justify-content-center">
-  <div class="mb-3 col-6">
-    <label for="exampleInputPassword1" class="form-label">Correo Electronico</label>
-    <input type="email" class="form-control" id="exampleInputPassword1">
-  </div>
-</div>
-
-<div class="row d-flex justify-content-center">
-  <div class="mb-3 col-6">
-    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-    <input type="email" class="form-control" id="exampleInputPassword1">
-  </div>
-</div>
-
-</div>
-   
-
- <div class="container-xxl col-12">
-    <div class="row d-flex justify-content-center">
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Agregar Respuesta</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Eliminar Respuesta</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Guardar Cambios</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >3.</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >. . .</button>
-      <button type="button" class="btn btn-danger btn-lg m-2"  >X</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Todo</button>
-      <button type="button" class="btn btn-primary btn-lg m-2"  >Reportar</button>
-    </div>
- </div>
--->
 
 
-<!-- As a heading -->
+
 
 
 <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
