--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
   <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" media="screen"/>
+  <!--Librerias Daniel-->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body >
 
