--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Foro Multimedia</title>
@@ -27,6 +27,7 @@
 
 </head>
 <body >
+
 <app-root></app-root>
 
 </body>
