--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
   <!--Librerias Daniel-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet"> 
   <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
